Fix alignment of heading and fix semantics

--- a/src/components/ProductTile/productTile.scss
+++ b/src/components/ProductTile/productTile.scss
@@ -2,15 +2,14 @@
   margin: 0 0 16px;
   padding: 16px;
   border-radius: 5px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .1);
 
   @media screen and (min-width: 768px) {
-    margin: 0 8px 16px;
-    flex: 1;
+    margin: 0 0 16px;
     transition: .25s box-shadow;
 
     &:hover {
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 12px rgba(0, 0, 0, .2);
     }
   }
 }
