--- a/src/pages/Products/products.scss
+++ b/src/pages/Products/products.scss
@@ -7,6 +7,7 @@
     ul {
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
       flex-wrap: wrap;
       max-width: 800px;
       margin: 0 auto;
